--- a/main.html
+++ b/main.html
@@ -239,7 +239,7 @@
   <div class="wrap">
     <header class="topbar">
   <div class="brand" href="#" aria-label="charity:water">
-  <img class="brand-logo" src="images/charitywaterlogo.jpg" alt="charity: water logo" />
+  <img class="brand-logo" src="charitywaterlogo.jpg" alt="charity: water logo" />
   </div>
 
 
