--- a/main.html
+++ b/main.html
@@ -266,7 +266,7 @@
 
 
         <div class="card" aria-label="photo">
-          <img src="images/water.png" alt="Hands holding a glass of water" />
+          <img src="water.png" alt="Hands holding a glass of water" />
 
 
        
